--- a/2021/package.json
+++ b/2021/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/solutionD1.js"
+    "start": "node ./dist/DAY_2/solutionD2.js"
   },
   "keywords": [],
   "author": "",
