--- a/2021/package.json
+++ b/2021/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/DAY_2/solutionD2.js"
+    "start": "node ./dist/DAY_3/solutionD3.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "typescript": "^5.1.3"
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.1.6"
   }
 }
