--- a/2021/package.json
+++ b/2021/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/DAY_13/solutionD13.js",
-    "test": "jest solutionD13.test.ts"
+    "start": "node ./dist/DAY_14/solutionD14.js",
+    "test": "jest solutionD14.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "semver": "^7.5.4"
   }
 }
