--- a/2021/package.json
+++ b/2021/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/DAY_14/solutionD14.js",
-    "test": "jest solutionD14.test.ts"
+    "code": "tsc; node ./dist/DAY_15/solutionD15.js",
+    "test": "jest ./src/__test__"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
